--- a/index.html
+++ b/index.html
@@ -32,7 +32,31 @@
     <div id="tourHighlight"></div>
     <div id="nextTourStop"></div>
     <div id="emailCheck"></div>
-    <div id="bioToggle"></div>
+    <div id="bioToggle">
+  <button id="toggleBioBtn">Show/Hide Band Bio</button>
+  <section id="band-bio">
+        <h2 class="metal-title">🤘 Who Are Skullcapz?</h2>
+        <p class="bio-intro">
+          <strong>Skullcapz</strong> is Norway’s most electrifying (and fictional) heavy metal band, forged in the icy north for this Dev Shop simulation! Known for their <span class="bio-highlight">gritty monochrome style</span>, thunderous riffs, and a fanbase as loyal as a viking horde, Skullcapz brings the noise and the spectacle to every stage.
+        </p>
+        <ul class="band-stats">
+          <li>🎵 <strong>Genre:</strong> Heavy Metal, Alt Rock</li>
+          <li>🌍 <strong>Origin:</strong> Norway</li>
+          <li>🌐 <strong>Monthly Listeners:</strong> Spotify: 100K | Tidal: 30K</li>
+          <li>👁️‍🗨️ <strong>Website Traffic:</strong> ~5K visits/month</li>
+          <li>🎨 <strong>Vibe:</strong> Monochrome, dark, stage smoke mandatory</li>
+        </ul>
+        <h3 class="metal-title">🎤 Meet the Band</h3>
+        <ul class="band-members">
+          <li>🧑‍🎤 <strong>Lead Vocals:</strong> Astrid (shreds the mic and the rules)</li>
+          <li>🎸 <strong>Guitar:</strong> Rune (riffs so sharp they cut steel)</li>
+          <li>🥁 <strong>Drums:</strong> Lars (brings the thunder, never misses a beat)</li>
+          <li>🎹 <strong>Synths:</strong> Ingrid (adds the haunting, icy melodies)</li>
+          <li>🎸 <strong>Bass:</strong> Bjorn (fan favorite, groove master)</li>
+        </ul>
+        <p class="bio-outro">Prepare for a sonic onslaught—Skullcapz is here to melt faces and steal the show! 🤟</p>
+      </section>
+    </div>
   </section>
 
   <script src="script.js"></script>
