--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <div id="tourHighlight"></div>
     <div id="nextTourStop"></div>
     <div id="emailCheck"></div>
-    <div id="bioToggle">
+    <div>
   <button id="toggleBioBtn">Show/Hide Band Bio</button>
-  <section id="band-bio">
-        <h2 class="metal-title">🤘 Who Are Skullcapz?</h2>
+  <div id="band-bio">
+    <h2 class="metal-title">🤘 Who Are Skullcapz?</h2>
         <p class="bio-intro">
           <strong>Skullcapz</strong> is Norway’s most electrifying (and fictional) heavy metal band, forged in the icy north for this Dev Shop simulation! Known for their <span class="bio-highlight">gritty monochrome style</span>, thunderous riffs, and a fanbase as loyal as a viking horde, Skullcapz brings the noise and the spectacle to every stage.
         </p>
@@ -55,7 +55,7 @@
           <li>🎸 <strong>Bass:</strong> Bjorn (fan favorite, groove master)</li>
         </ul>
         <p class="bio-outro">Prepare for a sonic onslaught—Skullcapz is here to melt faces and steal the show! 🤟</p>
-      </section>
+      </div>
     </div>
   </section>
 
